多角形を閉じるボタンの削除

--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
                 <div class="control-panel" id="control-panel">
                     <div class="input-group">
                         <label for="selection-controls">選択操作:</label>
-                        <div id="selection-controls" style="display: flex; gap: 10px;">
+                        <div id="selection-controls">
                             <button id="clear-selection-btn" aria-label="選択をクリア">選択クリア</button>
-                            <button id="finish-polygon-btn" aria-label="多角形を閉じる">多角形を閉じる</button>
                         </div>
                     </div>
                     
